Fixed margin and text alignment

--- a/src/components/PrivacyPolicy.css
+++ b/src/components/PrivacyPolicy.css
@@ -1,5 +1,5 @@
 .privacy-policy {
-    margin: auto;
+    margin: 2rem auto;
     width: 80%;
     min-width: 300px;
     text-align: center;
@@ -9,4 +9,5 @@
     width: 80%;
     min-width: 300px;
     margin: auto;
+    text-align: left;
 }
